# hPIC-XGC-scripts

./: .gitignore  README.md  check_status.sh  configure_hpic_xgc_simulations.sh  find_xgc_nodes_of_interest.py  kill_simulations.sh  lcpp_hosts.txt  parse_status_files.py  plot_iead.py  plot_velocity_dist.py  plot_xgc_mesh.py  plot_xgc_nodes_of_interest.py  run_command_on_all_hosts.sh  send_files_to_hosts.sh  send_results_to_mikhail.sh  temp_histogram.py  velocity_histogram.py
adios2_util/: CMakeLists.txt  adios2_wrapper.c  adios2_wrapper.h  cmake_wrapper.sh  dump_xgc_mesh.c  utils.c  utils.h
